// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse markdown > parse bash code 1`] = `
"<pre><code class="core lang-bash"><pre class="shiki vitesse-dark" style="background-color:#121212;color:#dbd7caee" tabindex="0"><code><span class="line"><span style="color:#B8A965">echo</span><span style="color:#BD976A"> $a</span></span></code></pre>
</code></pre>"
`;

exports[`parse markdown > parse code 1`] = `
"<pre><code class="core lang-js"><pre class="shiki vitesse-dark" style="background-color:#121212;color:#dbd7caee" tabindex="0"><code><span class="line"><span style="color:#CB7676">var</span><span style="color:#BD976A"> a</span><span style="color:#666666"> =</span><span style="color:#4C9A91"> 123</span></span></code></pre>
</code></pre>"
`;
